luton-scenes-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: ltfcscenes
  namespace: luton
  labels:
    app: ltfcscenes
spec:
  replicas: 1
  selector:
      matchLabels:
        app: ltfcscenes
  template:
    metadata:
      labels:
        app: ltfcscenes
    spec:
      containers:
      - name: ltfcscenes
        image: nginx
        volumeMounts:
        - name: scenes-index
          mountPath: /usr/share/nginx/html/index.html
          subPath: index-scenes.html
        - name: images
          mountPath: /usr/share/nginx/html/images
          subPath: images
      volumes:
      - name: scenes-index
        azureFile:
          secretName: azure-secret
          shareName: isnginxlt
          readOnly: false
      - name: images
        azureFile:
          secretName: azure-secret
          shareName: isnginxlt
          readOnly: false

---

apiVersion: v1
kind: Service
metadata:
  name: ltfcscenes
  namespace: luton
spec:
  selector:
    app: ltfcscenes
  ports:
  - protocol: TCP
    port: 80
    targetPort: 80
